WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126290
[SOUP] willSendRequest doesn't work after a redirect
https://bugs.webkit.org/show_bug.cgi?id=126290
Summary
[SOUP] willSendRequest doesn't work after a redirect
Carlos Garcia Campos
Reported
2013-12-30 08:01:40 PST
The problem is that we are creating the new soup request for the redirect before calling ResourceHandleClient::willSendRequest() so that any change made to the request by the client is ignored.
Attachments
Patch
(8.71 KB, patch)
2013-12-30 08:06 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-12-30 08:06:16 PST
Created
attachment 220109
[details]
Patch
WebKit Commit Bot
Comment 2
2013-12-30 08:08:15 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2013-12-31 00:24:45 PST
Committed
r161176
: <
http://trac.webkit.org/changeset/161176
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug